[package]
name = "yuzuryo61"
# Version definition: [YEAR].[RELEASE].[FIX]
# * Such like the JetBrains IDEs version definition!
version = "2021.1.0"
description = "Program about YuzuRyo61 (that's it!)"
authors = ["YuzuRyo61 <yuzuryo61@yuzulia.work>"]
edition = "2018"
readme = "README_PROGRAM.md"
homepage = "https://yuzuryo61.me/"
license-file = "LICENSE"
publish = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
webbrowser = "0.5.5"
